<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/TXTMagnitud"
        android:layout_weight="1"
        android:hint="@string/Magnitud"
        android:background="#ff15ff12" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="7"
        android:dividerPadding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="New Text"
            android:id="@+id/TxtDatoarriba"
            android:layout_weight="1"
            android:hint="@string/terremoto" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="New Text"
            android:id="@+id/TxtDatoAbajo"
            android:layout_weight="1"
            android:hint="@string/donde" />
    </LinearLayout>

</LinearLayout>